[package]
name = "speednet"
version = "0.1.0"
edition = "2021"

description = "Measure network speed"
readme = "README.md"
repository = "https://github.com/guillaumepellegrino/netns"
license = "GPL-3.0-or-later"
authors = ["Guillaume Pellegrino <guillaume.pellegrino@yahoo.com>"]
keywords = ["network", "linux", "speedtest"]
categories = ["network-programming"]


[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0"
clap = {version = "4.4.8", features = ["derive"]}
eyre = "0.6.8"
daemonize = "0.5.0"
lazy_static = "1.4.0"
